fixed final bug of scared ghosts overlapping pacman

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 #grid {
-  display: grid;
-  grid-template-columns: repeat(20, 1fr);
-  grid-template-rows: repeat(20, 1fr);
-  justify-content: center;
-  grid-column: 1 / 10;
-  grid-row: 1 / 10;
-  justify-content: center;
-  place-self: center;
-  background-color: black;
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(20, 1fr);
+    justify-content: center;
+    grid-column: 1 / 10;
+    grid-row: 1 / 10;
+    justify-content: center;
+    place-self: center;
+    background-color: black;
 }
 
 body {
@@ -15,9 +15,9 @@ body {
     color: whitesmoke;
     background-color: black;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     flex-direction: column;
-    align-items: center;;
+    align-items: center;
     letter-spacing: 2px;
 }
 
@@ -55,9 +55,9 @@ header {
 }
 
 .cell {
-  display: flex;
-  aspect-ratio: 1/1;
-  border: solid black;
+    display: flex;
+    aspect-ratio: 1/1;
+    border: solid black;
 }
 
 .wall {
